# youtube-test

./: .gitignore  README.md  main.py  models.py  pyproject.toml  query_utils.py  report.py  results.html  search.py  youtube_client.py
.github/: copilot-instructions.md
templates/: report_template.html
tests/: test_report.py
