[project]
name = "yt-like-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotlicffi>=1.2.0.0",
    "browser-cookie3>=0.20.1",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.2",
    "yt-dlp>=2025.12.8",
]
